Run then model for 2 h 20 m and obtain 29 events and highlight the events inside of each time preiod automaticaly

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ OneDay.pkl
 CompleteOneDay.pkl
 current.csv
 melo.csv
+figures/
+report/
 
 # Compiled source #
 ###################
@@ -15,6 +17,8 @@ melo.csv
 *.so
 *.png
 *.so
+*.svg
+
 
 # Packages #
 ############
