start working on pv pmu and almost finish with journal paper

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,14 @@ OneDay.pkl
 CompleteOneDay.pkl
 current.csv
 melo.csv
+feb 08.spydata
 figures/
 report/
 data/
 alireza code/
 soft-dtw/
+presentation/
+reports/
 
 # Compiled source #
 ###################
